--- a/templates/default.html
+++ b/templates/default.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
+{% load i18n %}
 {% load static %}
 <html>
 <head>
-        <title>{% block title %}Главная{% endblock title %}</title>
+        <title>{% block title %}{% trans 'Main Page' %}{% endblock title %}</title>
     <link href="{% static 'bootstrap-5.2.2-dist/css/bootstrap.min.css' %}" rel="stylesheet" />
 </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">NewsPaper</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/news/">Все новости
+          <a class="nav-link active" href="/news/">{% trans 'All News' %}
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/articles/create/">Создать пост</a>
+          <a class="nav-link" href="/articles/create/">{% trans 'Create Post' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/news/create/">Создать новость</a>
+          <a class="nav-link" href="/news/create/">{% trans 'Create News' %}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/user_detail/">Профиль</a>
+          <a class="nav-link" href="/user_detail/">{% trans 'Profile' %}</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -41,12 +42,28 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">{% trans 'Search' %}</button>
       </form>
     </div>
   </div>
 </nav>
-    <div class="container">{% block content %}Главная{% endblock content %}</div>
+    <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+        <input type="hidden" name="next" value="{{ redirect_to }}">
+
+        <select name="language" id="">
+            {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+            {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+
+            {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {{ language.name_local }} - {{ language.code }}
+                </option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set">
+    </form>
+
+    <div class="container">{% block content %}{% trans 'Main Page' %}{% endblock content %}</div>
 
         <script src="{% static 'jquery-3.6.1.min.js' %}"></script>
         <script src="{% static 'bootstrap-5.2.2-dist/js/bootstrap.bundle.min.js' %}" ></script>
