--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,11 +1,13 @@
 {% extends 'default.html' %}
-
+{% load i18n %}
 {% block content %}
-<h1>Удаление новости</h1>
+
+
+<h1>{% trans 'Delete News' %}</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
-    <p>Удаляем новость {{ post.title }}?</p>
-    <input type="submit" value="Удалить" />
+    <p>{% trans 'Are you sure you want delete news' %} {{ post.title }}?</p>
+    <input type="submit" value="{% trans 'Delete' %}" />
 </form>
 {% endblock content %}
